Change Popover to PÃopper to avoid block overflow in the body, Show info card in deck board

--- a/src/components/DeckBoard.css
+++ b/src/components/DeckBoard.css
@@ -3,7 +3,8 @@
     min-height: 288px;
     background-color: #25170a;
     background-image: url('../../public/resources/wood.png');
-    background-size: cover;
+    background-size: 900px;
+    background-position: left center;
     padding: 16px 0;
 }
 
